--- a/app/assets/stylesheets/front_user.css
+++ b/app/assets/stylesheets/front_user.css
@@ -2,5 +2,6 @@
  *= require just_user
  *= require nprogress
  *= require avatar_upload
+ *= require footer_menu
  *= require LTE_admin/css/font-awesome
  */
