--- a/app/assets/stylesheets/login_animation.scss
+++ b/app/assets/stylesheets/login_animation.scss
@@ -1,34 +1,37 @@
 *, *:before, *:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+a{
+  text-decoration: none;
 }
 
 html, body {
-    font-size: 62.5%;
-    height: 100%;
-    overflow: hidden;
+  font-size: 62.5%;
+  height: 100%;
+  overflow: hidden;
 }
 @media (max-width: 768px) {
-    html, body {
-        font-size: 50%;
-    }
+  html, body {
+    font-size: 50%;
+  }
 }
 
 svg {
-    display: inline-block;
-    width: 2rem;
-    height: 2rem;
-    overflow: visible;
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  overflow: visible;
 }
 
 .svg-icon {
-    cursor: pointer;
+  cursor: pointer;
 }
 .svg-icon path {
-    stroke: rgba(255, 255, 255, 0.9);
-    fill: none;
-    stroke-width: 1;
+  stroke: rgba(255, 255, 255, 0.9);
+  fill: none;
+  stroke-width: 1;
 }
 
 input, button {
@@ -37,27 +40,30 @@ input, button {
 }
 
 .cont {
-    position: relative;
-    height: 100%;
-    background-size: cover;
-    overflow: auto;
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  position: relative;
+  height: 100%;
+  background-size: cover;
+  overflow: auto;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
 
 .demo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -15rem;
-    margin-top: -26.5rem;
-    width: 30rem;
-    height: 53rem;
-    overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -15rem;
+  margin-top: -26.5rem;
+  width: 30rem;
+  height: 53rem;
+  overflow: hidden;
 }
 
-.login {
+//mac
+
+@media ( min-width: 374px) {
+  .login {
     position: relative;
-    height: 100%;
+    height: 90%;
     background: -webkit-linear-gradient(top, rgba(146, 135, 187, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);
     background: linear-gradient(to bottom, rgba(146, 135, 187, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);
     -webkit-transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
@@ -66,152 +72,172 @@ input, button {
     transition: opacity 0.1s, transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25), -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
     -webkit-transform: scale(1);
     transform: scale(1);
+  }
 }
+
+//iphone5
+@media ( max-width: 321px) {
+  .login {
+    position: relative;
+    height: 85%;
+    /*background: -webkit-linear-gradient(top, rgba(146, 135, 187, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);*/
+    /*background: linear-gradient(to bottom, rgba(146, 135, 187, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);*/
+    -webkit-transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
+    transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
+    transition: opacity 0.1s, transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
+    transition: opacity 0.1s, transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25), -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+
 .login.inactive {
-    opacity: 0;
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+  opacity: 0;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
+
 .login__check {
-    position: absolute;
-    top: 16rem;
-    left: 13.5rem;
-    width: 14rem;
-    height: 2.8rem;
-    background: #fff;
-    -webkit-transform-origin: 0 100%;
-    transform-origin: 0 100%;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+  position: absolute;
+  top: 16rem;
+  left: 13.5rem;
+  width: 14rem;
+  height: 2.8rem;
+  background: #fff;
+  -webkit-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 .login__check:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 100%;
-    width: 2.8rem;
-    height: 5.2rem;
-    background: #fff;
-    box-shadow: inset -0.2rem -2rem 2rem rgba(0, 0, 0, 0.2);
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 100%;
+  width: 2.8rem;
+  height: 5.2rem;
+  background: #fff;
+  box-shadow: inset -0.2rem -2rem 2rem rgba(0, 0, 0, 0.2);
 }
 .login__form {
-    position: absolute;
-    top: 40%;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    padding: 1.5rem 2.5rem;
-    text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  padding: 1.5rem 2.5rem;
+  text-align: center;
 }
 .login__row {
-    height: 5rem;
-    padding-top: 1rem;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  height: 5rem;
+  padding-top: 1rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 .login__icon {
-    margin-bottom: -0.4rem;
-    margin-right: 0.5rem;
+  margin-bottom: -0.4rem;
+  margin-right: 0.5rem;
 }
 .login__icon.name path {
-    stroke-dasharray: 73.50196075439453;
-    stroke-dashoffset: 73.50196075439453;
-    -webkit-animation: animatePath 2s 0.5s forwards;
-    animation: animatePath 2s 0.5s forwards;
+  stroke-dasharray: 73.50196075439453;
+  stroke-dashoffset: 73.50196075439453;
+  -webkit-animation: animatePath 2s 0.5s forwards;
+  animation: animatePath 2s 0.5s forwards;
 }
 .login__icon.pass path {
-    stroke-dasharray: 92.10662841796875;
-    stroke-dashoffset: 92.10662841796875;
-    -webkit-animation: animatePath 2s 0.5s forwards;
-    animation: animatePath 2s 0.5s forwards;
+  stroke-dasharray: 92.10662841796875;
+  stroke-dashoffset: 92.10662841796875;
+  -webkit-animation: animatePath 2s 0.5s forwards;
+  animation: animatePath 2s 0.5s forwards;
 }
 .login__input {
-    display: inline-block;
-    width: 22rem;
-    height: 100%;
-    padding-left: 1.5rem;
-    font-size: 1.5rem;
-    background: transparent;
-    color: #FDFCFD;
+  display: inline-block;
+  width: 22rem;
+  height: 100%;
+  padding-left: 1.5rem;
+  font-size: 1.5rem;
+  background: transparent;
+  color: #FDFCFD;
 }
 .login__submit {
-    position: relative;
-    width: 100%;
-    height: 4rem;
-    margin: 5rem 0 2.2rem;
-    color: rgba(255, 255, 255, 1);
-    background: #FF3366;
-    font-size: 1.5rem;
-    border-radius: 3rem;
-    cursor: pointer;
-    overflow: hidden;
-    -webkit-transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
-    transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
+  position: relative;
+  width: 100%;
+  height: 4rem;
+  margin: 5rem 0 2.2rem;
+  color: rgba(255, 255, 255, 1);
+  background: #FF3366;
+  font-size: 1.5rem;
+  border-radius: 3rem;
+  cursor: pointer;
+  overflow: hidden;
+  -webkit-transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
+  transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
 }
 .login__submit:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -1.5rem;
-    margin-top: -1.5rem;
-    width: 3rem;
-    height: 3rem;
-    border: 2px dotted #fff;
-    border-radius: 50%;
-    border-left: none;
-    border-bottom: none;
-    -webkit-transition: opacity 0.1s 0.4s;
-    transition: opacity 0.1s 0.4s;
-    opacity: 0;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -1.5rem;
+  margin-top: -1.5rem;
+  width: 3rem;
+  height: 3rem;
+  border: 2px dotted #fff;
+  border-radius: 50%;
+  border-left: none;
+  border-bottom: none;
+  -webkit-transition: opacity 0.1s 0.4s;
+  transition: opacity 0.1s 0.4s;
+  opacity: 0;
 }
 .login__submit.processing {
-    width: 4rem;
-    font-size: 0;
+  width: 4rem;
+  font-size: 0;
 }
 .login__submit.processing:after {
-    opacity: 1;
-    -webkit-animation: rotate 0.5s 0.4s infinite linear;
-    animation: rotate 0.5s 0.4s infinite linear;
+  opacity: 1;
+  -webkit-animation: rotate 0.5s 0.4s infinite linear;
+  animation: rotate 0.5s 0.4s infinite linear;
 }
 .login__submit.success {
-    -webkit-transition: opacity 0.1s 0.3s, background-color 0.1s 0.3s, -webkit-transform 0.3s 0.1s ease-out;
-    transition: opacity 0.1s 0.3s, background-color 0.1s 0.3s, -webkit-transform 0.3s 0.1s ease-out;
-    transition: transform 0.3s 0.1s ease-out, opacity 0.1s 0.3s, background-color 0.1s 0.3s;
-    transition: transform 0.3s 0.1s ease-out, opacity 0.1s 0.3s, background-color 0.1s 0.3s, -webkit-transform 0.3s 0.1s ease-out;
-    -webkit-transform: scale(30);
-    transform: scale(30);
-    opacity: 0.9;
+  -webkit-transition: opacity 0.1s 0.3s, background-color 0.1s 0.3s, -webkit-transform 0.3s 0.1s ease-out;
+  transition: opacity 0.1s 0.3s, background-color 0.1s 0.3s, -webkit-transform 0.3s 0.1s ease-out;
+  transition: transform 0.3s 0.1s ease-out, opacity 0.1s 0.3s, background-color 0.1s 0.3s;
+  transition: transform 0.3s 0.1s ease-out, opacity 0.1s 0.3s, background-color 0.1s 0.3s, -webkit-transform 0.3s 0.1s ease-out;
+  -webkit-transform: scale(30);
+  transform: scale(30);
+  opacity: 0.9;
 }
 .login__submit.success:after {
-    -webkit-transition: opacity 0.1s 0s;
-    transition: opacity 0.1s 0s;
-    opacity: 0;
-    -webkit-animation: none;
-    animation: none;
+  -webkit-transition: opacity 0.1s 0s;
+  transition: opacity 0.1s 0s;
+  opacity: 0;
+  -webkit-animation: none;
+  animation: none;
 }
 .login__signup {
-    font-size: 1.2rem;
-    color: #ABA8AE;
+  font-size: 1.2rem;
+  color: #ABA8AE;
 }
 .login__signup a {
-    color: #fff;
-    cursor: pointer;
+  color: #fff;
+  cursor: pointer;
 }
 
 .app {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    display: none;
-    -webkit-transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
-    transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
-    transition: opacity 0.1s, transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
-    transition: opacity 0.1s, transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25), -webkit-transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  display: none;
+  -webkit-transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
+  transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
+  transition: opacity 0.1s, transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
+  transition: opacity 0.1s, transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25), -webkit-transform 0.3s cubic-bezier(0.68, -0.45, 0.465, 1.25);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
 }
 .app.active {
     opacity: 1;
