--- a/app/views/users/profile/new_avatar.html.erb
+++ b/app/views/users/profile/new_avatar.html.erb
@@ -26,7 +26,6 @@
           <div class="spinner" style="display: none">请添加图片文件...</div>
         </div>
         <div class="action">
-          <!-- <input type="file" id="file" style=" width: 200px">-->
           <div class="new-contentarea tc">
             <a href="javascript:void(0)" class="upload-img">
               <label for="upload-file">添加文件</label>
@@ -44,46 +43,47 @@
         </div>
       </form>
     </div>
-    <script type="text/javascript">
-        $(window).load(function() {
-            var options =
-            {
-                thumbBox: '.thumbBox',
-                spinner: '.spinner',
-                // imgSrc: 'images/avatar.png'
-            }
-            var cropper = $('.imageBox').cropbox(options);
-            $('#upload-file').on('change', function(){
-                var reader = new FileReader();
-                reader.onload = function(e) {
-                    options.imgSrc = e.target.result;
-                    cropper = $('.imageBox').cropbox(options);
-                }
-                reader.readAsDataURL(this.files[0]);
-                this.files = [];
-            })
-            $('#btnCrop').on('click', function(){
-                var img = cropper.getDataURL();
-                $('.cropped').html('');
-                $('.cropped').append('<br><img src="'+img+'" align="absmiddle" style="width:180px;margin-left:5px;border-radius:180px;box-shadow:0px 0px 12px #7E7E7E;"><p>180px*180px</p>');
-                $('.cropped').append('<img src="'+img+'" align="absmiddle" style="width:180px;margin-left:5px;"><p>180px*180px</p>');
-                $('#data').val(img);
-                $('#tijiao').removeAttr('style');
-            })
-            $('#btnZoomIn').on('click', function(){
-                cropper.zoomIn();
-            })
-            $('#btnZoomOut').on('click', function(){
-                cropper.zoomOut();
-            })
-        });
-    </script>
   </div>
 </section>
+<div class="footer-menu">
+  <%= render :partial => 'layouts/footer_menu' %>
+</div>
 </body>
 </html>
-<script>
-    $(document).on('page:fetch',   function() { NProgress.start(); });
-    $(document).on('page:change',  function() { NProgress.done(); });
+<script type="text/javascript">
+  $(window).load(function() {
+    var options =
+    {
+      thumbBox: '.thumbBox',
+      spinner: '.spinner',
+      // imgSrc: 'images/avatar.png'
+    }
+    var cropper = $('.imageBox').cropbox(options);
+    $('#upload-file').on('change', function(){
+      var reader = new FileReader();
+      reader.onload = function(e) {
+        options.imgSrc = e.target.result;
+        cropper = $('.imageBox').cropbox(options);
+      }
+      reader.readAsDataURL(this.files[0]);
+      this.files = [];
+    })
+    $('#btnCrop').on('click', function(){
+      var img = cropper.getDataURL();
+      $('.cropped').html('');
+      $('.cropped').append('<br><img src="'+img+'" align="absmiddle" style="width:180px;margin-left:5px;border-radius:180px;box-shadow:0px 0px 12px #7E7E7E;"><p>180px*180px</p>');
+      $('.cropped').append('<img src="'+img+'" align="absmiddle" style="width:180px;margin-left:5px;"><p>180px*180px</p>');
+      $('#data').val(img);
+      $('#tijiao').removeAttr('style');
+    })
+    $('#btnZoomIn').on('click', function(){
+        cropper.zoomIn();
+    })
+    $('#btnZoomOut').on('click', function(){
+        cropper.zoomOut();
+    })
+  });
+  $(document).on('page:fetch',   function() { NProgress.start(); });
+  $(document).on('page:change',  function() { NProgress.done(); });
 </script>
 
