--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -1,5 +1,5 @@
 <%= content_for(:title, @channel.name + ' | Koogle') %>
-<div class="container" style="padding-top: 70px">
+<div class="container">
   <div class="grid">
     <div class="programa">
       <div class="side">
