--- a/app/views/layouts/_footer_menu.html.erb
+++ b/app/views/layouts/_footer_menu.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div>
+  <div class="<%= 'active' if action_name=='index'%>">
     <a href="/"><icon class="fa fa-delicious"></icon> 精彩推荐</a>
   </div>
-  <div>
+  <div class="<%= 'active' if ['channel','playing','interim'].include?("#{action_name}") %>">
     <ul class="menu">
       <li>
         <a><icon class="fa fa-stack-overflow"></icon> 视频分类</a>
@@ -16,6 +16,17 @@
   </div>
   <div>
     <ul class="menu">
+    <% if current_user %>
+      <li>
+        <a><%= display_name current_user %></a>
+        <div>
+          <a href="<%= new_avatar_path %>"><i class="fa fa-upload"></i>&nbsp;上传头像</a>
+          <a href="<%= profile_path %>"><i class="fa fa-user-secret"></i>&nbsp;个人中心</a>
+          <a href="<%= columns_path %>"> <i class="fa fa-gears"></i>&nbsp;数据管理</a>
+          <a href="<%= sign_out_path %>"><i class="fa fa-sign-out"></i>&nbsp;账户登出</a>
+        </div>
+      </li>
+    <% else %>
       <li>
         <a><icon class="fa fa-user-secret"></icon> 用户中心</a>
         <div>
@@ -23,6 +34,7 @@
           <a href="<%= sign_in_path %>"><i class="fa fa-sign-in"></i>&nbsp;&nbsp;登陆</a>
         </div>
       </li>
+    <% end %>
     </ul>
   </div>
 </div>
