菜单激活装填判断

--- a/app/views/layouts/_footer_menu.html.erb
+++ b/app/views/layouts/_footer_menu.html.erb
@@ -14,7 +14,7 @@
       </li>
     </ul>
   </div>
-  <div>
+  <div class="<%= 'active' unless ['index','channel','playing','interim'].include?("#{action_name}") %>">
     <ul class="menu">
     <% if current_user %>
       <li>
