用户头像页添加底部菜单

--- a/app/views/users/profile/new_avatar.html.erb
+++ b/app/views/users/profile/new_avatar.html.erb
@@ -45,6 +45,9 @@
     </div>
   </div>
 </section>
+<div class="footer-menu">
+  <%= render :partial => 'layouts/footer_menu' %>
+</div>
 </body>
 </html>
 <script type="text/javascript">
