--- a/app/views/layouts/_footer_menu.html.erb
+++ b/app/views/layouts/_footer_menu.html.erb
@@ -17,6 +17,10 @@
           <% Column.hexie.each do |channel|%>
             <a href="<%= video_channel_path(channel.english) %>"><i class="<%= channel.icon %>"></i>&nbsp;&nbsp;<%= channel.name %></a>
           <% end %>
+          <% if current_user && current_user.can_av? && Column.find_by_english('Fucking')%>
+            <% channel = Column.find_by_english('Fucking') %>
+            <a href="<%= video_channel_path(channel.english) %>"><i class="<%= channel.icon %>"></i>&nbsp;<%= channel.name %></a>
+          <% end %>
         </div>
       </li>
     </ul>
