修复栏目页视频导航条高度

--- a/app/assets/stylesheets/just_front.scss
+++ b/app/assets/stylesheets/just_front.scss
@@ -1665,6 +1665,10 @@ a:hover, a:focus {
     border-bottom: 2px solid #a1b1bc;
   }
 
+  .channel {
+    padding-top: 60px;
+  }
+
   .side {
     float: right;
     text-align: right;
