--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -1,7 +1,7 @@
 <%= content_for(:title, @channel.name + ' | Koogle') %>
 <div class="container">
   <div class="grid">
-    <div class="programa" style="padding-top: 60px">
+    <div class="programa channel">
       <div class="side">
         <span><img src="<%= image_url('toutu/videos.png') %>" style="width: 30px;height: 27px;padding-bottom: 2px"></span>
           <%= @videos.total_entries %> 个视频</span>
